# todo-haskell

./: .gitignore  readme.md
todo/: license.md  todo.cabal
todo-cli/: stack.yaml  todo-cli.cabal
todo-cli/app/: Main.hs
todo-web/: todo-web.cabal  todo.db
todo-web/app/: Main.hs
todo/src/Data/: Todo.hs
todo/test/: Spec.hs
