name:                todo-cli
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/diasbruno/todo-cli#readme
license:             BSD3
license-file:        license.md
author:              Bruno Dias
maintainer:          dias.h.bruno@gmail.com
copyright:           2017 Bruno Dias
category:            Web
build-type:          Simple
extra-source-files:  readme.md
cabal-version:       >=1.20

executable cli
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , todo
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/diasbruno/todo-cli
